Add design screens on main page

--- a/kalita-website/themes/adidoks/sass/common/_variables.scss
+++ b/kalita-website/themes/adidoks/sass/common/_variables.scss
@@ -22,7 +22,11 @@ $brown:    #aa9c84;
 $blue-300: #8ed6fb;
 $pink-500: #d32e9d;
 
-$primary: $purple;
+$red-1: #DA0000;
+$red-2: #EF0000;
+$red-3: #FF0200;
+
+$primary: $red-1;
 
 // Options
 //
