--- a/kalita-website/themes/adidoks/templates/macros/javascript.html
+++ b/kalita-website/themes/adidoks/templates/macros/javascript.html
@@ -1,5 +1,7 @@
 {% macro javascript() %}
+<script src="{{ get_url(path="js/jquery-3.6.0.min.js") | safe }}"></script>
 <script src="{{ get_url(path="js/main.js") | safe }}" defer></script>
+<script src="{{ get_url(path="js/animations.js") | safe }}" defer></script>
 {% if config.build_search_index %}
   <script src="{{ get_url(path="plugins/elasticlunr.min.js") | safe }}" defer></script>
   <script src="{{ get_url(path="search_index." ~ config.default_language ~ ".js") | safe }}" defer></script>
