--- a/kalita-website/themes/adidoks/sass/common/_variables.scss
+++ b/kalita-website/themes/adidoks/sass/common/_variables.scss
@@ -1,6 +1,8 @@
 // Color system
 
 $white:    #fff;
+$gray-50:  #fefefe;
+$gray-75:  #fcfcfc;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
@@ -9,6 +11,7 @@ $gray-500: #adb5bd;
 $gray-600: #6c757d;
 $gray-700: #495057;
 $gray-800: #343a40;
+$gray-850: #292d31;
 $gray-900: #212529;
 $black:    #000;
 
