--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -109,10 +109,44 @@
             <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
             <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
             <div class="roadpoint-icon-container">
-              <img class="roadpoint-icon {{ val.class }}" src={{ val.icon }}> 
+              <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
             </div>
             <p class="roadpoint-content">{{ val.content }}</p>
           </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section section-sm">
+  <div class="container">
+    <div class="row">
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-16 text-center">
+          <h1 id="team" class="mt-0 team-tittle">{{ section.extra.team.tittle | default(value="Team") }}</h1>
+        </div>
+      </div>
+      <div class="row">
+        {% for val in section.extra.team %}
+        <div class="col-lg-8 team-item-container">
+          <div class="row">
+            <div class="col-lg-4 team-avatar-container">
+              <img class="team-avatar" src="{{ val.avatar }}"> 
+            </div>
+            <div class="col-lg-12 team-description">
+              <h2 class="h2 team-name">{{ val.name }}</h2>
+              <h5 class="h5 text-muted team-role">
+                {{ val.role }} 
+                {% if val.github %} 
+                <a class="team-link" href="https://github.com/{{val.github}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg><span class="ms-2 visually-hidden">GitHub</span></a>
+                {% endif %}
+              </h2>
+              <p class="team-bio">{{ val.bio }}</p>
+            </div>
+          </div>
+          
+        </div>
         {% endfor %}
       </div>
     </div>
