--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -95,25 +95,46 @@
   </div>
 </section>
 
-<section class="section section-sm roadmap-section">
-  <div class="section section-sm roadmap-inner-section">
-    <div class="container roadmap-container">
+<section class="section section-sm crowdfund-section">
+  <div class="section section-sm crowdfund-inner-section">
+    <div class="container crowdfund-container">
       <div class="row justify-content-center">
         <div class="col-lg-16 text-center">
-          <h1 id="roadmap" class="mt-0 roadmap-tittle">{{ section.extra.roadmap.tittle | default(value="Roadmap") }}</h1>
+          <h1 id="crowdfund" class="mt-0 crowdfund-tittle">{{ section.extra.crowdfund.tittle | default(value="Crowdfund") }}</h1>
+          <h2 class="mt-3 crowdfund-counter">Raised <span class="raised-amount">{{ section.extra.crowdfund.amount }}</span> Erg</h2>
         </div>
       </div>
       <div class="row justify-content-center text-center">
-        {% for val in section.extra.roadpoint %}
-          <div class="col-lg-4">
-            <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
-            <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
-            <div class="roadpoint-icon-container">
-              <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
-            </div>
-            <p class="roadpoint-content">{{ val.content }}</p>
+        <div class="funding-wrapper">
+          <div class="minimal-fund-mark"></div>
+          <div class="funding-meter">
+            0%
           </div>
-        {% endfor %}
+          <div class="optimal-fund-mark"></div>
+        </div>
+        <div class="fund-labels">
+          <span class="h4 minimal-fund-label">24000 Erg</span>
+          <span class="h4 optimal-fund-label">120000 Erg</span>
+        </div>
+      </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-4">
+          <h4 class="h4">Bitcoin</h4>
+          <img class="payment-qrcode" src="{{ section.extra.crowdfund.bitcoin.qrcode }}">
+          <p class="payment-address">{{ section.extra.crowdfund.bitcoin.address }}</p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="h4">Lightning</h4>
+          <img class="payment-qrcode" src="{{ section.extra.crowdfund.lightning.qrcode }}">
+          <p class="payment-address">{{ section.extra.crowdfund.lightning.lnurl }}</p>
+          <p class="payment-note">You can use lightning wallet that supports LNURL format (like <a href="https://phoenix.acinq.co/">Phoenix</a> or <a href="https://lightning-wallet.com/">BLW</a>)</p>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="h4">Ergo</h4>
+          <img class="payment-qrcode" src="{{ section.extra.crowdfund.ergo.qrcode }}">
+          <p class="payment-address">{{ section.extra.crowdfund.ergo.address }}</p>
+          <p class="payment-note">Yep, you will be able to scan the QR code when we implement the wallet</p>
+        </div>
       </div>
     </div>
   </div>
@@ -153,6 +174,30 @@
           </div>
           
         </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section section-sm roadmap-section">
+  <div class="section section-sm roadmap-inner-section">
+    <div class="container roadmap-container">
+      <div class="row justify-content-center">
+        <div class="col-lg-16 text-center">
+          <h1 id="roadmap" class="mt-0 roadmap-tittle">{{ section.extra.roadmap.tittle | default(value="Roadmap") }}</h1>
+        </div>
+      </div>
+      <div class="row justify-content-center text-center">
+        {% for val in section.extra.roadpoint %}
+          <div class="col-lg-4">
+            <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
+            <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
+            <div class="roadpoint-icon-container">
+              <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
+            </div>
+            <p class="roadpoint-content">{{ val.content }}</p>
+          </div>
         {% endfor %}
       </div>
     </div>
