--- a/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
@@ -42,7 +42,7 @@ body.dark .funding-wrapper {
 .funding-meter {
     width: calc(0% + 50px);
     height: 100%;
-    border-radius: 25px;
+    border-radius: 25px 0 0 25px;
     background-color: $red-4;
     color: $white;
     margin-left: -25px;
@@ -78,7 +78,7 @@ body.dark .funding-meter {
 }
 .optimal-fund-label {
     position: relative;
-    left: calc(100% - 25px - 30px);
+    left: calc(100% - 25px - 55px);
 }
 
 .payment-qrcode {
