--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -113,7 +113,7 @@
           <div class="optimal-fund-mark"></div>
         </div>
         <div class="fund-labels">
-          <span class="h4 minimal-fund-label">24000 Erg</span>
+          <span class="h4 minimal-fund-label">{{section.extra.crowdfund.minimal}} Erg</span>
           <span class="h4 optimal-fund-label">120000 Erg</span>
         </div>
       </div>
@@ -134,6 +134,19 @@
           <img class="payment-qrcode" src="{{ section.extra.crowdfund.ergo.qrcode }}">
           <p class="payment-address">{{ section.extra.crowdfund.ergo.address }}</p>
           <p class="payment-note">Yep, you will be able to scan the QR code when we implement the wallet</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center text-center">
+        <div class="col-lg-6">
+          <h2 class="h2">Minimal level</h2>
+          <h4 class="h4 fund-level"><span class="raised-amount">{{section.extra.crowdfund.minimal.amount }}</span> Erg</h4>
+          <p class="level-description">{{ section.extra.crowdfund.minimal.content }} </p>
+        </div>
+        <div class="col-lg-6">
+          <h2 class="h2">Optimal level</h2>
+          <h4 class="h4 fund-level"><span class="raised-amount">{{section.extra.crowdfund.optimal.amount }}</span> Erg</h4>
+          <p class="level-description">{{ section.extra.crowdfund.minimal.content }} </p>
         </div>
       </div>
     </div>
