--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -113,8 +113,8 @@
           <div class="optimal-fund-mark"></div>
         </div>
         <div class="fund-labels">
-          <span class="h4 minimal-fund-label">{{section.extra.crowdfund.minimal}} Erg</span>
-          <span class="h4 optimal-fund-label">120000 Erg</span>
+          <span class="h4 minimal-fund-label">{{ section.extra.crowdfund.minimal.amount }} Erg</span>
+          <span class="h4 optimal-fund-label">{{ section.extra.crowdfund.optimal.amount }} Erg</span>
         </div>
       </div>
       <div class="row justify-content-center text-center">
