--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -127,13 +127,13 @@
           <h4 class="h4">Lightning</h4>
           <img class="payment-qrcode" src="{{ section.extra.crowdfund.lightning.qrcode }}">
           <p class="payment-address">{{ section.extra.crowdfund.lightning.lnurl }}</p>
-          <p class="payment-note">You can use lightning wallet that supports LNURL format (like <a href="https://phoenix.acinq.co/">Phoenix</a> or <a href="https://lightning-wallet.com/">BLW</a>)</p>
+          <p class="payment-note">You can use lightning wallet that supports LNURL format (like <a href="https://phoenix.acinq.co/">Phoenix</a> or <a href="https://lightning-wallet.com/">BLW</a>).</p>
         </div>
         <div class="col-lg-4">
           <h4 class="h4">Ergo</h4>
           <img class="payment-qrcode" src="{{ section.extra.crowdfund.ergo.qrcode }}">
           <p class="payment-address">{{ section.extra.crowdfund.ergo.address }}</p>
-          <p class="payment-note">Yep, you will be able to scan the QR code when we implement the wallet</p>
+          <p class="payment-note">Yep, you will be able to scan the QR code when we implement the wallet.</p>
         </div>
       </div>
 
