--- a/kalita-website/themes/adidoks/sass/layouts/_team.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_team.scss
@@ -1,3 +1,29 @@
+.team-section {
+    width: 100%;
+    background-color: $gray-50;
+    margin-top: 70px;
+    transform: skewY(1deg);
+}
+.team-inner-section {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: $gray-75;
+    transform: skewY(1deg);
+}
+.team-container {
+    transform: skewY(-2deg);
+}
+body.dark .team-section {
+    background-color: $gray-850;
+}
+body.dark .team-inner-section {
+    background-color: $gray-800;
+}
+
+.team-tittle {
+    margin-bottom: 30px;
+}
+
 .team-tittle {
     margin-top: 40px;
     margin-bottom: 40px;
