--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -153,65 +153,65 @@
   </div>
 </section>
 
-<section class="section section-sm">
-  <div class="container">
-    <div class="row">
-      <div class="row justify-content-center text-center">
-        <div class="col-lg-16 text-center">
-          <h1 id="team" class="mt-0 team-tittle">{{ section.extra.team.tittle | default(value="Team") }}</h1>
-        </div>
+<section class="section section-sm roadmap-section">
+  <div class="container roadmap-container">
+    <div class="row justify-content-center">
+      <div class="col-lg-16 text-center">
+        <h1 id="roadmap" class="mt-0 roadmap-tittle">{{ section.extra.roadmap.tittle | default(value="Roadmap") }}</h1>
       </div>
-      <div class="row">
-        {% for val in section.extra.team %}
-        <div class="col-lg-8 team-item-container">
-          <div class="row">
-            <div class="col-lg-4 team-avatar-container">
-              <img class="team-avatar" src="{{ val.avatar }}"> 
-            </div>
-            <div class="col-lg-12 team-description">
-              <h2 class="h2 team-name">{{ val.name }}</h2>
-              <h5 class="h5 text-muted team-role">
-                {{ val.role }} 
-                {% if val.telegram %} 
-                <a class="team-link" href="https://t.me/{{val.telegram}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 37.503 33.574" fill="none" stroke="currentColor" stroke-width="3" xmlns:v="https://vecta.io/nano"><g stroke-linecap="round"><path d="M1.013 14.53L36.503 1l-7.818 31.561" stroke-linejoin="round"/><path d="M29.141 7.652L11.588 19.114M1.013 14.53l6.114 2.673m21.558 15.358L16.037 22.382"/></g><path d="M29.141 7.652L16.037 22.382"/></svg><span class="ms-2 visually-hidden">Telegram</span></a>
-                {% endif %}
-                {% if val.github %} 
-                <a class="team-link" href="https://github.com/{{val.github}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg><span class="ms-2 visually-hidden">GitHub</span></a>
-                {% endif %}
-                {% if val.email %} 
-                <a class="team-link" href="mailto:{{val.email}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="15" viewBox="0 0 52.838 39.042" fill="none" stroke="currentColor" stroke-width="4" xmlns:v="https://vecta.io/nano"><rect width="50.838" height="37.042" x="1" y="1" rx="5" stroke-linejoin="round"/><g fill="none"><path d="M2.889 2.079l23.388 22.946M49.872 2.02L26.277 25.025" stroke-linecap="round"/><path d="M2.333 36.447l17.66-17.399M50.107 36.83l-17.83-17.782"/></g></svg><span class="ms-2 visually-hidden">Email</span></a>
-                {% endif %}
-              </h2>
-              <p class="team-bio">{{ val.bio }}</p>
-            </div>
+    </div>
+    <div class="row justify-content-center text-center">
+      {% for val in section.extra.roadpoint %}
+        <div class="col-lg-4">
+          <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
+          <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
+          <div class="roadpoint-icon-container">
+            <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
           </div>
-          
+          <p class="roadpoint-content">{{ val.content }}</p>
         </div>
-        {% endfor %}
-      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
 
-<section class="section section-sm roadmap-section">
-  <div class="section section-sm roadmap-inner-section">
-    <div class="container roadmap-container">
-      <div class="row justify-content-center">
-        <div class="col-lg-16 text-center">
-          <h1 id="roadmap" class="mt-0 roadmap-tittle">{{ section.extra.roadmap.tittle | default(value="Roadmap") }}</h1>
-        </div>
-      </div>
-      <div class="row justify-content-center text-center">
-        {% for val in section.extra.roadpoint %}
-          <div class="col-lg-4">
-            <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
-            <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
-            <div class="roadpoint-icon-container">
-              <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
-            </div>
-            <p class="roadpoint-content">{{ val.content }}</p>
+<section class="section section-sm team-section">
+  <div class="section section-sm team-inner-section">
+    <div class="container team-container">
+      <div class="row">
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-16 text-center">
+            <h1 id="team" class="mt-0 team-tittle">{{ section.extra.team.tittle | default(value="Team") }}</h1>
           </div>
-        {% endfor %}
+        </div>
+        <div class="row">
+          {% for val in section.extra.team %}
+          <div class="col-lg-8 team-item-container">
+            <div class="row">
+              <div class="col-lg-4 team-avatar-container">
+                <img class="team-avatar" src="{{ val.avatar }}"> 
+              </div>
+              <div class="col-lg-12 team-description">
+                <h2 class="h2 team-name">{{ val.name }}</h2>
+                <h5 class="h5 text-muted team-role">
+                  {{ val.role }} 
+                  {% if val.telegram %} 
+                  <a class="team-link" href="https://t.me/{{val.telegram}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 37.503 33.574" fill="none" stroke="currentColor" stroke-width="3" xmlns:v="https://vecta.io/nano"><g stroke-linecap="round"><path d="M1.013 14.53L36.503 1l-7.818 31.561" stroke-linejoin="round"/><path d="M29.141 7.652L11.588 19.114M1.013 14.53l6.114 2.673m21.558 15.358L16.037 22.382"/></g><path d="M29.141 7.652L16.037 22.382"/></svg><span class="ms-2 visually-hidden">Telegram</span></a>
+                  {% endif %}
+                  {% if val.github %} 
+                  <a class="team-link" href="https://github.com/{{val.github}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg><span class="ms-2 visually-hidden">GitHub</span></a>
+                  {% endif %}
+                  {% if val.email %} 
+                  <a class="team-link" href="mailto:{{val.email}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="15" viewBox="0 0 52.838 39.042" fill="none" stroke="currentColor" stroke-width="4" xmlns:v="https://vecta.io/nano"><rect width="50.838" height="37.042" x="1" y="1" rx="5" stroke-linejoin="round"/><g fill="none"><path d="M2.889 2.079l23.388 22.946M49.872 2.02L26.277 25.025" stroke-linecap="round"/><path d="M2.333 36.447l17.66-17.399M50.107 36.83l-17.83-17.782"/></g></svg><span class="ms-2 visually-hidden">Email</span></a>
+                  {% endif %}
+                </h2>
+                <p class="team-bio">{{ val.bio }}</p>
+              </div>
+            </div>
+            
+          </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
   </div>
