--- a/kalita-website/themes/adidoks/sass/layouts/_header.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_header.scss
@@ -43,6 +43,9 @@
 }
 
 @include media-breakpoint-up(md) {
+  .nav-item:first-child {
+    margin-left: 1.25rem;
+  }
   .nav-item {
     margin-left: 0.5rem;
   }
