Fix duplication of text in optimal level description

--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -146,7 +146,7 @@
         <div class="col-lg-6">
           <h2 class="h2">Optimal level</h2>
           <h4 class="h4 fund-level"><span class="raised-amount">{{section.extra.crowdfund.optimal.amount }}</span> Erg</h4>
-          <p class="level-description">{{ section.extra.crowdfund.minimal.content }} </p>
+          <p class="level-description">{{ section.extra.crowdfund.optimal.content }} </p>
         </div>
       </div>
     </div>
