add hexresearch url

--- a/kalita-website/themes/adidoks/sass/layouts/_team.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_team.scss
@@ -46,3 +46,14 @@ body.dark .team-inner-section {
 .team-link {
     padding-bottom: 10px;
 }
+
+.hxr-team {
+    margin-bottom: 20px;
+}
+
+.team-description {
+  font-size: 14pt;
+}
+.team-description {
+  margin-bottom: 40px;
+}
