--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -8,7 +8,7 @@
   {% else %}
     {% set title = "" %}
   {% endif %}
-  
+
   {% if config.extra.title_addition and title %}
     {% set title_addition = title_separator ~ config.extra.title_addition %}
   {% elif config.extra.title_addition %}
@@ -16,9 +16,9 @@
   {% else %}
     {% set title_addition = "" %}
   {% endif %}
-  
+
   {% set description = config.description %}
-  
+
   {{ macros_head::seo(title=title, title_addition=title_addition, description=description, is_home=true) }}
 {% endblock seo %}
 
@@ -36,7 +36,7 @@
             {% endfor %}
           </div>
 
-          
+
         </div>
         <div class="col-lg-10 col-xl-10 mb-5 align-self-center">
           <div class="row justify-content-center">
@@ -69,7 +69,7 @@
         <div class="col-lg-5">
           <h2 class="h4">Security aware</h2>
           <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks.netlify.app">Mozilla Observatory</a> out of the box. Easily change the default Security Headers to suit your needs.</p>
-        </div>      
+        </div>
         <div class="col-lg-5">
           <h2 class="h4">Fast by default ⚡️</h2>
           <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=7731347bb8ce999eff7428a8e763b637">Google Lighthouse</a> by default. Doks removes unused css, prefetches links, and lazy loads images.</p>
@@ -166,7 +166,7 @@
           <h2 class="h4 roadpoint-tittle">{{ val.tittle }}</h2>
           <h2 class="h2 roadpoint-date">{{ val.date }} </h2>
           <div class="roadpoint-icon-container">
-            <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}"> 
+            <img class="roadpoint-icon {{ val.class }}" src="{{ val.icon }}">
           </div>
           <p class="roadpoint-content">{{ val.content }}</p>
         </div>
@@ -184,31 +184,41 @@
             <h1 id="team" class="mt-0 team-tittle">{{ section.extra.team.tittle | default(value="Team") }}</h1>
           </div>
         </div>
+        <div class="row justify-content-center text-center">
+          <div class="col-lg-8">
+            <a href="https://github.com/hexresearch">
+              <img class="hxr-team" src="team/hexresearch.png">
+            </a>
+            <p class="team-description">
+              {{ section.extra.team_description | safe }}
+            </p>
+          </div>
+        </div>
         <div class="row">
           {% for val in section.extra.team %}
           <div class="col-lg-8 team-item-container">
             <div class="row">
               <div class="col-lg-4 team-avatar-container">
-                <img class="team-avatar" src="{{ val.avatar }}"> 
+                <img class="team-avatar" src="{{ val.avatar }}">
               </div>
               <div class="col-lg-12 team-description">
                 <h2 class="h2 team-name">{{ val.name }}</h2>
                 <h5 class="h5 text-muted team-role">
-                  {{ val.role }} 
-                  {% if val.telegram %} 
+                  {{ val.role }}
+                  {% if val.telegram %}
                   <a class="team-link" href="https://t.me/{{val.telegram}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 37.503 33.574" fill="none" stroke="currentColor" stroke-width="3" xmlns:v="https://vecta.io/nano"><g stroke-linecap="round"><path d="M1.013 14.53L36.503 1l-7.818 31.561" stroke-linejoin="round"/><path d="M29.141 7.652L11.588 19.114M1.013 14.53l6.114 2.673m21.558 15.358L16.037 22.382"/></g><path d="M29.141 7.652L16.037 22.382"/></svg><span class="ms-2 visually-hidden">Telegram</span></a>
                   {% endif %}
-                  {% if val.github %} 
+                  {% if val.github %}
                   <a class="team-link" href="https://github.com/{{val.github}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg><span class="ms-2 visually-hidden">GitHub</span></a>
                   {% endif %}
-                  {% if val.email %} 
+                  {% if val.email %}
                   <a class="team-link" href="mailto:{{val.email}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="15" viewBox="0 0 52.838 39.042" fill="none" stroke="currentColor" stroke-width="4" xmlns:v="https://vecta.io/nano"><rect width="50.838" height="37.042" x="1" y="1" rx="5" stroke-linejoin="round"/><g fill="none"><path d="M2.889 2.079l23.388 22.946M49.872 2.02L26.277 25.025" stroke-linecap="round"/><path d="M2.333 36.447l17.66-17.399M50.107 36.83l-17.83-17.782"/></g></svg><span class="ms-2 visually-hidden">Email</span></a>
                   {% endif %}
-                </h2>
+                </h5>
                 <p class="team-bio">{{ val.bio }}</p>
               </div>
             </div>
-            
+
           </div>
           {% endfor %}
         </div>
