--- a/kalita-website/themes/adidoks/sass/common/_global.scss
+++ b/kalita-website/themes/adidoks/sass/common/_global.scss
@@ -155,6 +155,7 @@ body {
 .docs-content {
   padding-bottom: 3rem;
   order: 1;
+  margin-top: 20px !important;
 }
 
 .docs-navigation, .blog-navigation {
