--- a/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
@@ -49,8 +49,9 @@ body.dark .funding-wrapper {
     background-color: $red-4;
     color: $white;
     margin-left: -25px;
-    padding-top: 7px;
+    padding-top: 10px;
     font-weight: bold;
+    font-size: 10pt;
 
 }
 body.dark .funding-meter {
