Fix minimal and optimal amounts

--- a/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
+++ b/kalita-website/themes/adidoks/sass/layouts/_crowdfund.scss
@@ -32,6 +32,13 @@ body.dark .raised-amount {
     color: $link-color-dark;
 }
 
+.ergo-amount {
+    color: $red-3;
+}
+body.dark .ergo-amount {
+    color: $link-color-dark;
+}
+
 .funding-wrapper {
     border-radius: 25px;
     height: 40px;
