--- a/kalita-website/themes/adidoks/templates/index.html
+++ b/kalita-website/themes/adidoks/templates/index.html
@@ -140,12 +140,12 @@
       <div class="row justify-content-center text-center">
         <div class="col-lg-6">
           <h2 class="h2">Minimal level</h2>
-          <h4 class="h4 fund-level"><span class="raised-amount">{{section.extra.crowdfund.minimal.amount }}</span> Erg</h4>
+          <h4 class="h4 fund-level"><span class="ergo-amount">{{section.extra.crowdfund.minimal.amount }}</span> Erg</h4>
           <p class="level-description">{{ section.extra.crowdfund.minimal.content }} </p>
         </div>
         <div class="col-lg-6">
           <h2 class="h2">Optimal level</h2>
-          <h4 class="h4 fund-level"><span class="raised-amount">{{section.extra.crowdfund.optimal.amount }}</span> Erg</h4>
+          <h4 class="h4 fund-level"><span class="ergo-amount">{{section.extra.crowdfund.optimal.amount }}</span> Erg</h4>
           <p class="level-description">{{ section.extra.crowdfund.optimal.content }} </p>
         </div>
       </div>
